# opentelemetry-redis-llm-sample

./: README.md  create_embeddings.py  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  rag-with-openllmetry.py  rag-with-traceloop.py  rag.py  simple_similarity_search.py
